--- a/Assignments/module-2/style.css
+++ b/Assignments/module-2/style.css
@@ -43,7 +43,7 @@ h1 {
 
 .content {
   border: 3px solid black;
-  background-color: gray;
+  background-color: #D3D3D3;
   width: 90%;
   height: auto;
   margin-right: auto;
