--- a/Assignments/module-2/style.css
+++ b/Assignments/module-2/style.css
@@ -78,6 +78,9 @@ h1 {
     margin-left: -2.8%;
     width: 105.5%;
   }
+  .title3 {
+    width: 14%;
+  }
 }
 
 /********** Small devices only: Mobile **********/
